[gd_scene load_steps=8 format=2]

[ext_resource path="res://stuff/flies.gd" type="Script" id=1]
[ext_resource path="res://utility/this_handles_clicks.tscn" type="PackedScene" id=2]

[sub_resource type="CircleShape2D" id=17]

[sub_resource type="CircleShape2D" id=13]
radius = 16.0

[sub_resource type="CircleShape2D" id=14]
radius = 60.0

[sub_resource type="Animation" id=15]
resource_name = "New Anim"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("HostDetector/CollisionShape2D:shape:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 60.0, 500.0 ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HostDetector/CollisionShape2D:shape:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 60.0 ]
}

[node name="Flies" type="RigidBody2D"]
collision_layer = 8
collision_mask = 6
mode = 2
mass = 0.4
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="Tether" type="DampedSpringJoint2D" parent="."]
node_a = NodePath("..")
node_b = NodePath("../UpDog")
bias = 0.9
length = 10.0
stiffness = 64.0
damping = 0.23

[node name="UpDog" type="RigidBody2D" parent="."]
collision_layer = 0
collision_mask = 2
mass = 4.0
gravity_scale = -0.2

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpDog"]
shape = SubResource( 17 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 12
lifetime = 2.0
lifetime_randomness = 0.39
draw_order = 1
emission_shape = 1
emission_sphere_radius = 14.0
direction = Vector2( 0, -1 )
spread = 90.0
gravity = Vector2( 0, 0 )
initial_velocity = 10.0
initial_velocity_random = 0.46
orbit_velocity = 1.0
linear_accel = -2.0
radial_accel = 2.0
damping = 34.87
damping_random = 0.7
scale_amount = 2.0
color = Color( 0.172549, 0.886275, 0, 1 )
hue_variation = 0.28
hue_variation_random = 0.73
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 13 )

[node name="Clicky" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Clicky"]
shape = SubResource( 13 )

[node name="HostDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HostDetector"]
shape = SubResource( 14 )

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.7
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 15 )
anims/RESET = SubResource( 16 )

[connection signal="body_entered" from="." to="." method="_on_Flies_body_entered"]
[connection signal="click" from="Clicky" to="." method="_on_Clicky_click"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
